crates/meilisearch/tests/dumps/snapshots/mod.rs/import_dump_v4_rubygems_with_settings/2.snap
---
source: meilisearch/tests/dumps/mod.rs
---
{
  "results": [
    {
      "uid": 92,
      "indexUid": "rubygems",
      "status": "succeeded",
      "type": "documentAdditionOrUpdate",
      "canceledBy": null,
      "details": {
        "receivedDocuments": 0,
        "indexedDocuments": 1042
      },
      "error": null,
      "duration": "PT14.034672S",
      "enqueuedAt": "2021-09-08T08:40:31.390775Z",
      "startedAt": "2021-09-08T08:51:39.060642Z",
      "finishedAt": "2021-09-08T08:51:53.095314Z"
    }
  ],
  "total": 92,
  "limit": 1,
  "from": 92,
  "next": 91
}
